[@FOXONE/MIXIN-SDK-JSBRIDGE]: 0.1.0

--- a/packages/mixin-jsbridge-demo/src/index.html
+++ b/packages/mixin-jsbridge-demo/src/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>mixin-jsbridge-demo</title>
+    <meta name="theme-color" content="#ff64b1">
+    <title>Mixin-JSBridge</title>
+    <script src="//cdn.bootcdn.net/ajax/libs/eruda/2.4.1/eruda.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script>eruda.init();</script>
   </head>
   <body>
     <noscript>
