--- a/packages/bot/src/index.html
+++ b/packages/bot/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="theme-color" content="#ff64b1">
     <title>Mixin-JSBridge</title>
-    <script src="//cdn.bootcdn.net/ajax/libs/eruda/2.4.1/eruda.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/eruda/2.4.1/eruda.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script>eruda.init();</script>
   </head>
